# stablemax-orthogonal

./: README.md  pyproject.toml  requirements.txt
examples/: llama3.2-1b-alpaca.py  minimal_usage.py
src/: __init__.py  custom_trainer.py  orthogonal_optimizer.py  stablemax.py
